[gd_scene load_steps=3 format=3 uid="uid://cv8o7ubf2m0b1"]

[ext_resource type="Script" uid="uid://c04lu2rydngfx" path="res://scenes/tower.gd" id="1_ay4al"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vysjg"]
size = Vector2(16, 16)

[node name="Tower" type="Area2D"]
script = ExtResource("1_ay4al")
range = Array[Vector2]([Vector2(-1, 0), Vector2(1, 0)])
damage = 10.0
attack_speed = 1.0
cost = 20
fish_name = "Crab"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vysjg")

[node name="Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="Buffs" type="Node2D" parent="."]

[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_range_area_exited"]
[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="child_entered_tree" from="Buffs" to="." method="_on_buffs_child_entered_tree"]
[connection signal="child_exiting_tree" from="Buffs" to="." method="_on_buffs_child_exiting_tree"]
